CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

project(draw_collisions)

#-------------

#find_package(GLEW REQUIRED)
#include_directories(${GLEW_INCLUDE_DIRS})
#link_libraries(${GLEW_LIBRARIES})

include_directories(${CMAKE_SOURCE_DIR}/glew/include)


#-------------

#find_package( OpenGL REQUIRED )

include_directories( ${OPENGL_INCLUDE_DIRS} )

set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
set( GLAD_GL "" )

add_subdirectory( glfw )

option( draw_collisions-USE-GLFW-GLAD "Use GLAD from GLFW" ON )

if( draw_collisions-USE-GLFW-GLAD )
    include_directories("${GLFW_SOURCE_DIR}/deps")
    set( GLAD_GL "${GLFW_SOURCE_DIR}/deps/glad/gl.h" )
endif()

if( MSVC )
    SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup" )
endif()

add_subdirectory(counter)
include_directories(${CMAKE_SOURCE_DIR}/counter)
include_directories(${CMAKE_SOURCE_DIR}/math_lib/include)



add_executable( draw_collisions ./source/main.cpp)
target_link_libraries( draw_collisions ${OPENGL_LIBRARIES} glfw ${CMAKE_SOURCE_DIR}/glew/lib/Release/x64/glew32.lib _counter ${CMAKE_SOURCE_DIR}/math_lib/math_lib.lib)

if( MSVC )
    if(${CMAKE_VERSION} VERSION_LESS "3.6.0")
        message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'GLFW-CMake-starter' as StartUp Project in Visual Studio.\n" )
    else()
        set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GLFW-CMake-starter )
    endif()
endif()

